# ZonoOpt

./: CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  update_docs.bash
.github/workflows/: build_and_release.yml  cpp_build.yml  python_build.yml
cmake/: ZonoOptConfig.cmake.in
docs/C++/: Doxyfile  mathjax_conf.js
docs/C++/html/: ADMM_8cpp.html  ADMM_8hpp.html  ADMM_8hpp_source.html  BnbDataStructures_8hpp.html  BnbDataStructures_8hpp_source.html  Box_8cpp.html  Box_8hpp.html  Box_8hpp_source.html  BranchAndBound_8cpp.html  BranchAndBound_8hpp.html  BranchAndBound_8hpp_source.html  CholeskyUtilities_8cpp.html  CholeskyUtilities_8hpp.html  CholeskyUtilities_8hpp_source.html  ConZono_8cpp.html  ConZono_8hpp.html  ConZono_8hpp_source.html  EmptySet_8cpp.html  EmptySet_8hpp.html  EmptySet_8hpp_source.html  GenUtilities_8hpp.html  GenUtilities_8hpp_source.html  GurobiApi_8cpp.html  GurobiApi_8hpp.html  GurobiApi_8hpp_source.html  GurobiSettings_8hpp.html  GurobiSettings_8hpp_source.html  GurobiSolver_8cpp.html  GurobiSolver_8hpp.html  GurobiSolver_8hpp_source.html  HybZono_8cpp.html  HybZono_8hpp.html  HybZono_8hpp_source.html  Inequality_8hpp.html  Inequality_8hpp_source.html  IntervalMatrix_8cpp.html  IntervalMatrix_8hpp.html  IntervalMatrix_8hpp_source.html  Interval_8cpp.html  Interval_8hpp.html  (+204 more)
docs/C++/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  defines_1.js  files_1.js  files_4.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_1.js  (+52 more)
docs/python/source/: conf.py
examples/ball-and-paddle/: D1.json  D2.json  D3.json  D4.json  D5.json  D6.json  D7.json  S.json  S1.json  S2.json  S3.json  S4.json  S5.json  S6.json  S7.json  U.json  Z1.json  ball_and_paddle_example.py
examples/combined-behavior-motion-planning/: combined_behavior_motion_planning_example.py  draw_car.py
examples/conceptual-figure/: conceptual_figure.py  hybrid_conceptual_figure.py
examples/mhe/: mhe_example.py
examples/mpc/: mpc_example.py
examples/nonlinear-reachability/: nonlinear_reachability_example.py
examples/reach-avoid/: plot_heuristic_data.py  reach_avoid_example.py  reach_avoid_results.json
examples/safety-verification/: safety_verification_example.py
examples/sparsity/: hybzono_sparsity_example.py
include/: ZonoOpt.hpp
include/zonoopt/: ADMM.hpp  BnbDataStructures.hpp  Box.hpp  BranchAndBound.hpp  ConZono.hpp  EmptySet.hpp  GurobiApi.hpp  GurobiSettings.hpp  GurobiSolver.hpp  HybZono.hpp  Interval.hpp  IntervalMatrix.hpp  Intervals.hpp  MI_DataStructures.hpp  MI_Solver.hpp  Point.hpp  SCIPApi.hpp  SCIPSettings.hpp  SCIPSolver.hpp  SolverDataStructures.hpp  SparseMatrixUtilities.hpp  Zono.hpp  ZonoJson.hpp
python/src/: zonoopt_py.cpp
python/zonoopt/: __init__.py  __init__.pyi  _core.pyi  zono_json.py  zono_plot.py
src/: ADMM.cpp  Box.cpp  BranchAndBound.cpp  ConZono.cpp  EmptySet.cpp  GurobiApi.cpp  GurobiSolver.cpp  HybZono.cpp  Interval.cpp  IntervalMatrix.cpp  Intervals.cpp  MI_Solver.cpp  Point.cpp  PolymorphicFunctions.cpp  SCIPApi.cpp  SCIPSolver.cpp  SetOperations.cpp  Zono.cpp  ZonoJson.cpp
test/: CMakeLists.txt
test/cpp-tests/: test_safety_verification.cpp
test/cpp-tests/include/: unit_test_utilities.hpp
test/cpp-tests/src/: test_affine_inclusion.cpp  test_get_leaves.cpp  test_intersection.cpp  test_interval_arithmetic.cpp  test_is_empty.cpp  test_json.cpp  test_minkowski_sum.cpp  test_operator_overloading.cpp  test_overapproximation.cpp  test_point_contain.cpp  test_remove_redundancy.cpp  test_safety_verification.cpp  test_support.cpp  test_vrep_2_hybzono.cpp  test_zono_hull.cpp
test/python-tests/: Z_before.json  unit_tests.py
test/test-data/overapproximation/: rand_conzono.json  rand_hybzono.json  rand_zono.json
test/test-data/point_contain/: Z_not_full_dim.json
test/test-data/remove_redundancy/: Z_test5.json  Z_test6.json  Z_test7.json
test/test-data/support/: zono_0.json  zono_1.json  zono_2.json  zono_3.json  zono_4.json  zono_5.json  zono_6.json  zono_7.json  zono_8.json  zono_9.json
